--- a/Components/Base.lproj/Main.storyboard
+++ b/Components/Base.lproj/Main.storyboard
@@ -1,26 +1,224 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Components" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="gtC-GJ-uYj"/>
+                        <viewControllerLayoutGuide type="bottom" id="d7p-lw-gU1"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a1M-gT-Ho4">
+                                <rect key="frame" x="104" y="387" width="167" height="54"/>
+                                <color key="backgroundColor" red="0.28590570739999999" green="0.9366900709" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Show Alert"/>
+                                <connections>
+                                    <action selector="showAlertMethod" destination="BYZ-38-t0r" eventType="touchUpInside" id="z8I-iR-pKU"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nMj-We-5GB">
+                                <rect key="frame" x="16" y="491" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="a1M-gT-Ho4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8XB-zt-9ff"/>
+                            <constraint firstItem="a1M-gT-Ho4" firstAttribute="top" secondItem="gtC-GJ-uYj" secondAttribute="bottom" constant="323" id="95q-5E-iBq"/>
+                            <constraint firstItem="d7p-lw-gU1" firstAttribute="top" secondItem="a1M-gT-Ho4" secondAttribute="bottom" constant="226" id="J2y-A2-aGw"/>
+                            <constraint firstItem="a1M-gT-Ho4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="88" id="VNh-xT-kY6"/>
+                            <constraint firstAttribute="trailing" secondItem="nMj-We-5GB" secondAttribute="trailing" constant="16" id="aAT-52-uFe"/>
+                            <constraint firstItem="nMj-We-5GB" firstAttribute="top" secondItem="a1M-gT-Ho4" secondAttribute="bottom" constant="50" id="dvR-Tp-WaR"/>
+                            <constraint firstItem="nMj-We-5GB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="wy1-ne-3C2"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="yP5-qc-gj3"/>
+                    <connections>
+                        <outlet property="labelTest" destination="nMj-We-5GB" id="O8o-Vf-1Vo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2600.8000000000002" y="-12.143928035982009"/>
+        </scene>
+        <!--Initial View Controller-->
+        <scene sceneID="7l1-4b-Fzt">
+            <objects>
+                <viewController storyboardIdentifier="InitialViewController" id="y6v-lC-tiE" customClass="InitialViewController" customModule="Components" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jTk-SI-VKo"/>
+                        <viewControllerLayoutGuide type="bottom" id="XNb-8e-gM1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HfM-85-OMj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Initial Controller" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rP8-Kc-JhU">
+                                <rect key="frame" x="4" y="150" width="367" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="asT-gO-iwA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2797.1674876847292" y="-10.4"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="w49-9b-FKQ">
+            <objects>
+                <viewController storyboardIdentifier="SecondViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="8ga-F0-LyB" customClass="SecondViewController" customModule="Components" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BUG-zG-bFW"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ecx-zZ-1k4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Et2-Xx-0Z5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nqK-aK-Zx9">
+                                <rect key="frame" x="101.5" y="100" width="172" height="20.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mhK-PH-wVc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3079.4334975369457" y="-3.9999999999999996"/>
+        </scene>
+        <!--Test View Controller-->
+        <scene sceneID="nwM-Fv-4Il">
+            <objects>
+                <viewController restorationIdentifier="TestViewController" storyboardIdentifier="TestViewController" id="bel-FU-M9e" customClass="TestViewController" customModule="Components" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pvt-cg-zea"/>
+                        <viewControllerLayoutGuide type="bottom" id="Emj-jM-i8H"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="oD5-Ts-Btt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AcG-UM-GAb">
+                                <rect key="frame" x="16" y="20" width="343" height="100"/>
+                                <color key="backgroundColor" red="1" green="0.90980392160000001" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="0ph-2N-MZ9"/>
+                                    <constraint firstAttribute="height" constant="100" id="gxf-To-fUZ"/>
+                                    <constraint firstAttribute="height" constant="100" id="oAd-49-uzc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="0ph-2N-MZ9"/>
+                                        <exclude reference="gxf-To-fUZ"/>
+                                        <exclude reference="oAd-49-uzc"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="0ph-2N-MZ9"/>
+                                        <include reference="oAd-49-uzc"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="gxf-To-fUZ"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" text="praveen kumar  Sparity soft Solutions Hitechity hyderabad" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uah-og-zcZ">
+                                <rect key="frame" x="0.0" y="159" width="359" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Uah-og-zcZ" firstAttribute="leading" secondItem="oD5-Ts-Btt" secondAttribute="leading" id="4hB-TF-m7T"/>
+                            <constraint firstItem="AcG-UM-GAb" firstAttribute="centerX" secondItem="oD5-Ts-Btt" secondAttribute="centerX" id="9VY-go-Zmz"/>
+                            <constraint firstItem="Uah-og-zcZ" firstAttribute="top" secondItem="AcG-UM-GAb" secondAttribute="bottom" constant="39" id="EWA-av-Dn9"/>
+                            <constraint firstItem="AcG-UM-GAb" firstAttribute="centerY" secondItem="oD5-Ts-Btt" secondAttribute="centerY" id="Hjp-vy-zVy"/>
+                            <constraint firstItem="AcG-UM-GAb" firstAttribute="leading" secondItem="oD5-Ts-Btt" secondAttribute="leading" constant="16" id="bmP-P0-a3f"/>
+                            <constraint firstItem="AcG-UM-GAb" firstAttribute="top" secondItem="pvt-cg-zea" secondAttribute="bottom" id="fFH-jt-h2n"/>
+                            <constraint firstAttribute="trailing" secondItem="AcG-UM-GAb" secondAttribute="trailing" priority="750" constant="16" id="qd4-uP-Zse"/>
+                            <constraint firstAttribute="trailing" secondItem="Uah-og-zcZ" secondAttribute="trailing" constant="16" id="r4M-kK-u1Q"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="9VY-go-Zmz"/>
+                                <exclude reference="Hjp-vy-zVy"/>
+                                <exclude reference="bmP-P0-a3f"/>
+                                <exclude reference="fFH-jt-h2n"/>
+                                <exclude reference="qd4-uP-Zse"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="9VY-go-Zmz"/>
+                                <include reference="Hjp-vy-zVy"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="bmP-P0-a3f"/>
+                                <include reference="fFH-jt-h2n"/>
+                                <include reference="qd4-uP-Zse"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="labelTest" destination="Uah-og-zcZ" id="DWL-U3-bCg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="03d-eF-0u2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3439.1999999999998" y="-684.10794602698661"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1qA-9N-war">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VaW-X1-coi" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jr8-74-IdW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xeu-Ma-dIC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ujA-4i-hTG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2077.463054187192" y="-12"/>
         </scene>
     </scenes>
 </document>
